--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Big Fashion - Ecommerce</title>
+    <title>TECOVAS - Ecommerce</title>
   </head>
-  <body>
+  <body class="debug-screens">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
