feat: arrivals-collections-induction-trending-videocarousel

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn.shopify.com/oxygen-v2/26986/12111/24887/353455/build/_assets/logo-minimal-green-400-ESO3SNGD.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TECOVAS - Ecommerce</title>
   </head>
+
   <body class="debug-screens">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
